theme-template/deploy/kube-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{APP_NAME}#-prez-deployment
  labels:
    app: #{APP_NAME}#
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #{APP_NAME}#
  template:
    metadata:
      labels:
        app: #{APP_NAME}#
    spec:
      containers:
        - name: #{APP_NAME}#-prez
          image: prez:#{VERSION}#
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          ports:
            - containerPort: #{PORT}#
          volumeMounts:
            - mountPath: /app/Prez/prez/#{THEME_VOLUME}#
              name: #{THEME_VOLUME}#
      volumes:
        - name: #{THEME_VOLUME}#
          persistentVolumeClaim:
            claimName: #{APP_NAME}#-prez-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: #{APP_NAME}#-prez-service
spec:
  selector:
    app: #{APP_NAME}#
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: #{PORT}#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #{APP_NAME}#-prez-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
spec:
  rules:
    - host: #{SYSTEM_URI}#
      http:
        paths:
          - backend:
              serviceName: #{APP_NAME}#-prez-service
              servicePort: 80
